--- a/xml-ref-test/src/main/java/pl/eurekin/editor/LineDefinitionEditorView.form
+++ b/xml-ref-test/src/main/java/pl/eurekin/editor/LineDefinitionEditorView.form
@@ -26,6 +26,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <name value="new"/>
               <text value="New"/>
             </properties>
           </component>
@@ -34,6 +35,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <name value="delete"/>
               <text value="Delete"/>
             </properties>
           </component>
@@ -42,6 +44,7 @@
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <name value="up"/>
               <text value="Up"/>
             </properties>
           </component>
@@ -50,6 +53,7 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <name value="down"/>
               <text value="Down"/>
             </properties>
           </component>
