test - first attempt at integrating Red-Hat Cloud as a JNLP deploy host

--- a/xml-ref-test/src/main/jnlp/template.vm
+++ b/xml-ref-test/src/main/jnlp/template.vm
@@ -4,7 +4,7 @@
         spec="$jnlpspec"
 ##        codebase="$jnlpCodebase"
 ##        href="$outputFile">
-        codebase="https://dl-web.dropbox.com/spa/5e9kbyw5dxyp93u/experimental/public"
+        codebase="http://pacelibom-eurekin.rhcloud.com"
         href="app.jnlp">
     <information>
         #if($project.Name)
