JNLP Check for available updates in info panel

--- a/xml-ref-test/src/main/jnlp/template.vm
+++ b/xml-ref-test/src/main/jnlp/template.vm
@@ -4,7 +4,7 @@
         spec="$jnlpspec"
 ##        codebase="$jnlpCodebase"
 ##        href="$outputFile">
-        codebase="http://pacelibom-eurekin.rhcloud.com"
+        codebase="$jnlpCodebase"
         href="app.jnlp">
     <information>
         #if($project.Name)
