another fix - this time codebase in template.vm
for some reason the variable $jnlpCodebase is substituted as ${project.url}jnlp

--- a/xml-ref-test/src/main/jnlp/template.vm
+++ b/xml-ref-test/src/main/jnlp/template.vm
@@ -4,8 +4,8 @@
         spec="$jnlpspec"
 ##        codebase="$jnlpCodebase"
 ##        href="$outputFile">
-        codebase="$jnlpCodebase"
-        href="app.jnlp">
+        codebase="http://pacelibom-eurekin.rhcloud.com"
+        href="$outputFile">
     <information>
         #if($project.Name)
             <title>$project.Name</title>
