--- a/xml-ref-test/src/main/jnlp/template.vm
+++ b/xml-ref-test/src/main/jnlp/template.vm
@@ -4,8 +4,10 @@
         spec="$jnlpspec"
 ##        codebase="$jnlpCodebase"
 ##        href="$outputFile">
-        codebase="http://pacelibom-eurekin.rhcloud.com"
-        href="$outputFile">
+## #[[
+codebase="$$codebase"
+## ]]#
+href="$outputFile">
     <information>
         #if($project.Name)
             <title>$project.Name</title>
